# codemagic-mcp-improved

./: .env.example  .gitignore  BUILD_ENDPOINTS.md  CONTRIBUTING.md  QUICK_START.md  README.md  USAGE_GUIDE.md  pyproject.toml  setup_mcp.py
.cursor/: mcp-alternative.json  mcp.json
.cursor/rules/: 01-poetry.md  02-python.md  03-mcp.md  04-security.md  05-opensource.md
codemagic_mcp/: README.md  applications.py  artifacts.py  base.py  builds.py  caches.py  server.py  teams.py  workflows.py
