[tool.poetry]
name = "codemagic-mcp"
version = "0.1.0"
description = "Simple MCP server for Codemagic CI/CD"
authors = ["Stefano Amorelli <stefano@amorelli.tech>"]
readme = "README.md"
license = "MIT"
packages = [{include = "codemagic_mcp"}]

[tool.poetry.dependencies]
python = "^3.10"
mcp = {extras = ["cli"], version = "^1.6.0"}
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/ee99ee/codemagic-mcp-improved"
"Bug Tracker" = "https://github.com/ee99ee/codemagic-mcp-improved/issues"
"Repository" = "https://github.com/ee99ee/codemagic-mcp-improved"